--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,6 +35,27 @@ h1 {
   line-height: 1.1;
 }
 
+input {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  margin-right: 0.6em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+input:hover {
+  border-color: #646cff;
+}
+input:focus,
+input:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
